--- a/css/style_mumber_center.css
+++ b/css/style_mumber_center.css
@@ -95,11 +95,12 @@ border-top:1px solid #eeeeee;border-left:1px solid #eeeeee;border-right:1px soli
 .member-content-right-li-right{width: 935px; float: left;margin-left: 20px; border-bottom: 1px solid #EEEEEE;
 padding-bottom: 20px;
 }
-.member-content-right-ul li{width:100%; height: 105px;overflow: hidden;position: relative;}
+.member-content-right-ul li{width:100%; overflow: hidden;position: relative;padding-bottom: 20px;}
 .member-content-right-li-right h4{padding-bottom: 10px;}
 .member-content-right-li-right a{font-size: 14px;font-weight: bold;display: block;}
-.member-content-right-li-right-time{width: 160px; height: 30px;position: absolute;right: 0px;top:20px; color: #666666;}
-.member-content-right-li-right p{width: 760px; height:25px;overflow: hidden;}
+.member-content-right-li-right-time{width: 160px; height: 30px;position: absolute;right: 0px;top:1px; color: #666666;}
+.member-content-right-li-right span{width:300px; height: 30px;position: absolute;left:150px;top:0px; display: block;overflow: hidden;}
+.member-content-right-li-right p{width: 750px;overflow: hidden;padding-bottom: 5px;}
 
 .member-content-right-nav{padding-bottom: 30px;overflow: hidden;width: 100%;}
 .member-content-right-dl{width: ;}
@@ -108,3 +109,50 @@ padding-bottom: 20px;
 .member-content-right-dl .line{ width:78px;height: 2px;background: #ee4240;position: absolute;bottom: 0px; left: 0px; display: none;}
 .member-content-right-dl .on{color:#ee4240!important;}
 .member-content-right-dl .on .line{display: block!important;}
+
+
+
+
+
+/*修改密码页面*/
+.registration-center-nav2{width: 785px;  height: 79px; margin:0 auto;position: relative; margin-top: 50px;}
+
+.registration-center-nav2-line{width:80%;position: absolute;height: 4px;top:20px; background: #eeeeee;left: 10%;}
+
+.registration-center-nav2-list li{width:100px; height: 65px; float: left; position:absolute;top:0px;}
+.registration-center-nav2-list li span{width: 40px; height: 40px; border-radius:50%;
+background:#eeeeee; display: block; text-align: center; line-height: 40px; color: #393939;
+margin-left:30px;}
+
+.registration-center-nav2-list li p{font-size:16px; width: 100%; text-align: center;padding-top: 10px;}
+
+.registration-center-nav2-list .on span{background:#e4393c; color:#FFFFFF; }
+.registration-center-nav2-list .list01{left: 10px;}
+.registration-center-nav2-list .list02{left: 320px;}
+.registration-center-nav2-list .list03{left: 640px;}
+
+
+
+.xxmm-box{width:420px;overflow: hidden;margin: 0 auto;padding-top: 40px; height:260px;}
+
+
+.xxmm-box-list-input{overflow: hidden; margin-top:15px;position: relative;width: 100%; height:40px;}
+.xxmm-box-list-input span{display: block;height:35px; font-language-override: left;width: 450px;font-weight: bolder;line-height: 35px;}
+.xxmm-box-list-input h4{float: left; font-size: 14px;;line-height: 35px; width:100px;font-weight: 500;}
+.xxmm-box-list-input input{border:1px solid #dddddd; width:450px; height:35px; text-indent:8px;  }
+.registration-form-list-yzbtn8{position: absolute;right:10px; top: 0px; cursor: pointer;
+	width:140px; height: 35px; background: #eeeeee;text-align: center;line-height: 35px; font-size: 14px;}
+.registration-form-list-yzbtn8:hover{color: #FFFFFF;background: #eb2c3a;}
+.registration-form-list-idyz{width:80px; height: 35px;background: #009E94;position: absolute;right:70px; top: 0px;}
+
+.registration-form-btn{width:95px; cursor:pointer; height:35px; margin-top: 30px; background:#eb2c3a; text-align:center; line-height: 35px;font-size: 14px; margin-left:100px; color: #FFFFFF;}
+.registration-form-btn:hover{background: #d40b1a;}
+
+
+.ddzf01-title img{position: relative;top:-2px;width:30px;}
+.ddzf01-titlezfzt{padding-bottom:6px;font-size:24px!important;color:#e4393c;}
+.xxmm-box03-line{width: 100%; height: 35px;padding-top:10px;}
+.xxmm-box03-line span{color: #e4393c;}
+.xxmm-box03-line a{color: #447dd2;font-size: 14px;}
+.xxmm-box-k{display: none;}
+.xxmm-box .on{display: block!important;}
